[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentnsim"
dynamic = ["version"]
description = "The OpenTNSim package aims to facilitate the analysis of network performance for different network configurations, fleet compositions and traffic rules."
readme = "README.md"
license = "mit"
authors = [
    { name = "Mark van Koningsveld", email = "m.vankoningsveld@tudelft.nl" },
]
keywords = [
    "OpenTNSim",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas >=2.2.3",
    "matplotlib >=3.10.1",
    "geopandas >=1.0.1",
    "shapely >=2.1.0",
    "sphinx >= 7.4.7",
    "deprecated >=1.2.18",
    "networkx >=3.4.2",
    "simpy >=4.1.1",
    "openclsim >=1.6.2",
    "scipy >=1.15.2",
    "requests-cache >=1.2.1",
    "simplekml >=1.3.6",
    "tqdm >=4.67.1",
    "xarray >=2025.3.1",
    "click >=8.1.8",
]

[project.optional-dependencies]
testing = [
    "pytest >=8.3.5",
    "jupyter >=1.1.1",
    "ipykernel >=6.29.5",
    "pytest-cov >=6.1.1",
    "pytest-timeout >=2.3.1",
    "colorcet >=3.1.0",
    "cython >= 3.1.0",
    "fiona >=1.10.1",
    "folium >=0.19.5",
    "ipyleaflet >=0.19.2",
    "ipywidgets >=8.1.7",
    "jsonschema >=4.23.0",
    "jupyter-book >=1.0.4.post1",
    "jupyterlab_widgets >=3.0.15",
    "momepy >=0.10.0",
    "nbconvert >=7.16.6",
    "nbmake >=1.5.5",
    "notebook >=7.4.2",
    "openpyxl >=3.1.5",
    "pytest-datadir >=1.6.1",
    "pyyaml >=6.0.2",
]

[project.scripts]
opentnsim = "opentnsim.cli:cli"

[project.urls]
Homepage = "https://github.com/TUDelft-CITG/OpenTNSim"

[tool.hatch.version]
path = "opentnsim/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/opentnsim",
]



[tool.black]
line-length = 132


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term-missing --cov-report html --verbose"

norecursedirs = [
    "dist",
    "build",
    ".tox",
    ".eggs"
]
testpaths = "tests"
